# face-voice-cut

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  hatch.toml  mypy.ini  pyproject.toml
docs/: README_CN.md
src/fvc/cli/: cli.py
src/fvc/core/: __init__.py  clip_extractor.py  data_models.py  face_embeddings.py  face_frames.py  frame_matcher.py  interfaces.py  progress_logger.py  segment_analyzer.py  state_manager.py  video_clips.py  video_processor.py
src/fvc/tools/: config.py  logger.py
